ascent_macro_tests/tests/macros/fail/missing_relation_keyword.rs
//! Missing `relation` keyword

use ascent::ascent;

ascent! {
    // Invalid: This rule is missing the `relation` keyword:
    fact(usize);
}

fn main() {}
